force-app/main/default/objects/Formulario__c/fields/Caracteristicas_producto_n_4__c.field-meta.xml
<CustomField>
    <fullName>Caracteristicas_producto_n_4__c</fullName>
    <label>Caracteristicas producto n°4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polimérica estándar</fullName>
            </value>
            <value>
                <fullName>Polimérica con fibra</fullName>
            </value>
            <value>
                <fullName>Semielemental</fullName>
            </value>
            <value>
                <fullName>Para diabetes</fullName>
            </value>
            <value>
                <fullName>De alta densidad calórica</fullName>
            </value>
            <value>
                <fullName>Hiperproteica</fullName>
            </value>
            <value>
                <fullName>Para UPP</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>