force-app/main/default/objects/Formulario__c/fields/Causa_relacionada_a_soporte_nutricional__c.field-meta.xml
<CustomField>
    <fullName>Causa_relacionada_a_soporte_nutricional__c</fullName>
    <label>Causa relacionada a soporte nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>