force-app/main/default/objects/Formulario__c/fields/Celiaquia__c.field-meta.xml
<CustomField>
    <fullName>Celiaquia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Celiaquía</label>
    <type>Checkbox</type>
</CustomField>