force-app/main/default/objects/Formulario__c/fields/Circunferencia_de_la_pantorrilla__c.field-meta.xml
<CustomField>
    <fullName>Circunferencia_de_la_pantorrilla__c</fullName>
    <label>Circunferencia de la pantorrilla (cm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>