force-app/main/default/objects/Formulario__c/fields/Circunferencia_del_brazo_cm__c.field-meta.xml
<CustomField>
    <fullName>Circunferencia_del_brazo_cm__c</fullName>
    <label>Circunferencia del brazo (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>