force-app/main/default/objects/Formulario__c/fields/Clasificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n__c</fullName>
    <inlineHelpText>Seleccionar en el caso de Elegir Obesidad / Desnutrición</inlineHelpText>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leve</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Severo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>