force-app/main/default/objects/Formulario__c/fields/Clasificacion_Global_Subjetiva__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_Global_Subjetiva__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Bien Nutrido</fullName>
            </value>
            <value>
                <fullName>B - Moderadamente Desnutrido</fullName>
            </value>
            <value>
                <fullName>C - Severamente Desnutrido</fullName>
            </value>
            <value>
                <fullName>No se puede Realizar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>