force-app/main/default/objects/Formulario__c/fields/Clasificacion_segun_valoracion_global__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_segun_valoracion_global__c</fullName>
    <label>Clasificación según valoración global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bien nutrido - A</fullName>
            </value>
            <value>
                <fullName>Moderadamente desnutrido - B</fullName>
            </value>
            <value>
                <fullName>Severamente desnutrido - C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>