force-app/main/default/objects/Formulario__c/fields/Cloro__c.field-meta.xml
<CustomField>
    <fullName>Cloro__c</fullName>
    <label>Cloro</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>