force-app/main/default/objects/Formulario__c/fields/Colesterol_total__c.field-meta.xml
<CustomField>
    <fullName>Colesterol_total__c</fullName>
    <label>Colesterol total</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>