force-app/main/default/objects/Formulario__c/fields/Comentarios_coordinador_medico__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_coordinador_medico__c</fullName>
    <label>Comentarios coordinador medico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>