force-app/main/default/objects/Formulario__c/fields/Complicaci_n_de_la_internaci_n__c.field-meta.xml
<CustomField>
    <fullName>Complicaci_n_de_la_internaci_n__c</fullName>
    <label>Complicación de la internación</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>