force-app/main/default/objects/Formulario__c/fields/Complicacion_actual__c.field-meta.xml
<CustomField>
    <fullName>Complicacion_actual__c</fullName>
    <label>Complicaciones del acceso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguna</fullName>
            </value>
            <value>
                <fullName>Desplazamiento / salida accidental</fullName>
            </value>
            <value>
                <fullName>Fuga periostoma</fullName>
            </value>
            <value>
                <fullName>Incorrecta localización en tubo digestivo</fullName>
            </value>
            <value>
                <fullName>Incorrecta localización en pulmón</fullName>
            </value>
            <value>
                <fullName>Infección periostoma</fullName>
            </value>
            <value>
                <fullName>Lesión periostoma</fullName>
            </value>
            <value>
                <fullName>Lesión por decúbito</fullName>
            </value>
            <value>
                <fullName>Obstruccion</fullName>
                <label>Obstrucción</label>
            </value>
            <value>
                <fullName>Perdida periostoma</fullName>
                <label>Pérdida periostoma</label>
            </value>
            <value>
                <fullName>Ruptura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>