force-app/main/default/objects/Formulario__c/fields/Complicaciones__c.field-meta.xml
<CustomField>
    <fullName>Complicaciones__c</fullName>
    <label>Complicaciones</label>
    <length>100</length>
    <type>Text</type>
</CustomField>