force-app/main/default/objects/Formulario__c/fields/Complicaciones_asociadas_a_la_NE__c.field-meta.xml
<CustomField>
    <fullName>Complicaciones_asociadas_a_la_NE__c</fullName>
    <label>Complicaciones asociadas a la NE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguna</fullName>
            </value>
            <value>
                <fullName>Broncoaspiración</fullName>
            </value>
            <value>
                <fullName>Constipación</fullName>
            </value>
            <value>
                <fullName>Diarrea</fullName>
            </value>
            <value>
                <fullName>Distensión</fullName>
            </value>
            <value>
                <fullName>Dolor abdominal</fullName>
            </value>
            <value>
                <fullName>Meteorismo</fullName>
            </value>
            <value>
                <fullName>Nauseas / vómitos</fullName>
            </value>
            <value>
                <fullName>Regurgitación</fullName>
            </value>
            <value>
                <fullName>Distención</fullName>
                <isActive>false</isActive>
                <label>Distención</label>
            </value>
            <value>
                <fullName>Residuo gástrico elevado</fullName>
                <isActive>false</isActive>
                <label>Residuo gástrico elevado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>