force-app/main/default/objects/Formulario__c/fields/Complicaciones_metabolicas__c.field-meta.xml
<CustomField>
    <fullName>Complicaciones_metabolicas__c</fullName>
    <label>Complicaciones metabólicas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguna</fullName>
            </value>
            <value>
                <fullName>Hipertrigliceridemia</fullName>
            </value>
            <value>
                <fullName>Hiperglucemia</fullName>
            </value>
            <value>
                <fullName>Hipofosfatemia</fullName>
            </value>
            <value>
                <fullName>Hiperfosfatemia</fullName>
            </value>
            <value>
                <fullName>Hipermagnesemia</fullName>
            </value>
            <value>
                <fullName>Hipomagnesemia</fullName>
            </value>
            <value>
                <fullName>Hipocalcemia</fullName>
            </value>
            <value>
                <fullName>Hipercalcemia</fullName>
            </value>
            <value>
                <fullName>Hipokalemia</fullName>
            </value>
            <value>
                <fullName>Hiperkalemia</fullName>
            </value>
            <value>
                <fullName>Hiponatremia</fullName>
            </value>
            <value>
                <fullName>Hipernatremia</fullName>
            </value>
            <value>
                <fullName>Hipercolesterolemia</fullName>
            </value>
            <value>
                <fullName>Hipoglucemia</fullName>
            </value>
            <value>
                <fullName>Hipercloremia</fullName>
            </value>
            <value>
                <fullName>Hipocloremia</fullName>
            </value>
            <value>
                <fullName>Hipercalemia</fullName>
                <isActive>false</isActive>
                <label>Hipercalemia</label>
            </value>
            <value>
                <fullName>Hiperfofatemia</fullName>
                <isActive>false</isActive>
                <label>Hiperfofatemia</label>
            </value>
            <value>
                <fullName>Hipertriglicerimia</fullName>
                <isActive>false</isActive>
                <label>Hipertriglicerimia</label>
            </value>
            <value>
                <fullName>Hipocalemia</fullName>
                <isActive>false</isActive>
                <label>Hipocalemia</label>
            </value>
            <value>
                <fullName>Hipofofotemia</fullName>
                <isActive>false</isActive>
                <label>Hipofofotemia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>