force-app/main/default/objects/Formulario__c/fields/Condicion_actual_del_acceso_enteral__c.field-meta.xml
<CustomField>
    <fullName>Condicion_actual_del_acceso_enteral__c</fullName>
    <label>Condición actual del acceso enteral</label>
    <length>50</length>
    <type>Text</type>
</CustomField>