force-app/main/default/objects/Formulario__c/fields/Condiciones_m_nimas_ambientales__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_m_nimas_ambientales__c</fullName>
    <description>¿Cuenta con las condiciones mínimas ambientales para recibir el soporte?</description>
    <inlineHelpText>¿Cuenta con las condiciones mínimas ambientales para recibir el soporte?
Condiciones mínimas: Electricidad, Agua, Heladera</inlineHelpText>
    <label>Condiciones mínimas ambientales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>