force-app/main/default/objects/Formulario__c/fields/Constipacion__c.field-meta.xml
<CustomField>
    <fullName>Constipacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constipación</label>
    <type>Checkbox</type>
</CustomField>