force-app/main/default/objects/Formulario__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <label>Contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>