force-app/main/default/objects/Formulario__c/fields/Continencia__c.field-meta.xml
<CustomField>
    <fullName>Continencia__c</fullName>
    <inlineHelpText>Independiente. Control completo de micción y defecación.

Dependiente. Incontinencia parcial o total de la micción o defecación.</inlineHelpText>
    <label>Continencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Dependiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>