force-app/main/default/objects/Formulario__c/fields/Coopera_con_indicaciones_medicas__c.field-meta.xml
<CustomField>
    <fullName>Coopera_con_indicaciones_medicas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coopera con indicaciones médicas</label>
    <type>Checkbox</type>
</CustomField>