force-app/main/default/objects/Formulario__c/fields/Creatinina__c.field-meta.xml
<CustomField>
    <fullName>Creatinina__c</fullName>
    <label>Creatinina (mg/dl)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>