force-app/main/default/objects/Formulario__c/fields/Cual_es_nutricion__c.field-meta.xml
<CustomField>
    <fullName>Cual_es_nutricion__c</fullName>
    <label>¿Cuál/es?</label>
    <type>TextArea</type>
</CustomField>