force-app/main/default/objects/Formulario__c/fields/Cuidado_de_accesos_enf__c.field-meta.xml
<CustomField>
    <fullName>Cuidado_de_accesos_enf__c</fullName>
    <label>Cuidado de accesos ¿Comprende?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>