force-app/main/default/objects/Formulario__c/fields/Cuidador_que_administra_el_SNE__c.field-meta.xml
<CustomField>
    <fullName>Cuidador_que_administra_el_SNE__c</fullName>
    <inlineHelpText>&apos;SNE: Soporte Nutricional Enteral&apos;</inlineHelpText>
    <label>Cuidador que administra el SNE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>