force-app/main/default/objects/Formulario__c/fields/D_sis__c.field-meta.xml
<CustomField>
    <fullName>D_sis__c</fullName>
    <label>Dósis</label>
    <length>35</length>
    <type>Text</type>
</CustomField>