force-app/main/default/objects/Formulario__c/fields/DBT__c.field-meta.xml
<CustomField>
    <fullName>DBT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBT</label>
    <type>Checkbox</type>
</CustomField>