force-app/main/default/objects/Formulario__c/fields/Decanulado__c.field-meta.xml
<CustomField>
    <fullName>Decanulado__c</fullName>
    <label>Decanulado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>