force-app/main/default/objects/Formulario__c/fields/Degluci_n_y_consistencias__c.field-meta.xml
<CustomField>
    <fullName>Degluci_n_y_consistencias__c</fullName>
    <label>Deglución y consistencias</label>
    <length>250</length>
    <type>Text</type>
</CustomField>