force-app/main/default/objects/Formulario__c/fields/Demanda_Metabolica_Estres__c.field-meta.xml
<CustomField>
    <fullName>Demanda_Metabolica_Estres__c</fullName>
    <label>Demanda metabólica / estrés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin estrés</fullName>
            </value>
            <value>
                <fullName>Leve</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>