force-app/main/default/objects/Formulario__c/fields/Descripci_n_Internaci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Internaci_n__c</fullName>
    <label>Descripción Internación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>