force-app/main/default/objects/Formulario__c/fields/Deshidratacion__c.field-meta.xml
<CustomField>
    <fullName>Deshidratacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deshidratación</label>
    <type>Checkbox</type>
</CustomField>