force-app/main/default/objects/Formulario__c/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <label>Diagnóstico</label>
    <length>50</length>
    <type>Text</type>
</CustomField>