force-app/main/default/objects/Formulario__c/fields/Diagnostico_Principal__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico_Principal__c</fullName>
    <label>Diagnóstico principal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>