force-app/main/default/objects/Formulario__c/fields/Dialisis__c.field-meta.xml
<CustomField>
    <fullName>Dialisis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diálisis</label>
    <type>Checkbox</type>
</CustomField>