force-app/main/default/objects/Formulario__c/fields/Diarrea__c.field-meta.xml
<CustomField>
    <fullName>Diarrea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diarrea</label>
    <type>Checkbox</type>
</CustomField>