force-app/main/default/objects/Formulario__c/fields/Dificultad_para_la_colocacion__c.field-meta.xml
<CustomField>
    <fullName>Dificultad_para_la_colocacion__c</fullName>
    <label>Dificultad para la colocación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>