force-app/main/default/objects/Formulario__c/fields/Dinamometr_a_basal_MSD__c.field-meta.xml
<CustomField>
    <fullName>Dinamometr_a_basal_MSD__c</fullName>
    <label>Dinamometría basal MSD</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>