force-app/main/default/objects/Formulario__c/fields/Dinamometr_a_basal_MSI__c.field-meta.xml
<CustomField>
    <fullName>Dinamometr_a_basal_MSI__c</fullName>
    <inlineHelpText>MSI: Miembro superior izquierdo</inlineHelpText>
    <label>Dinamometría basal MSI</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>