force-app/main/default/objects/Formulario__c/fields/Disminuy_o_Aument_la_ingesta__c.field-meta.xml
<CustomField>
    <fullName>Disminuy_o_Aument_la_ingesta__c</fullName>
    <label>Disminuyó o aumentó la ingesta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disminuyó</fullName>
            </value>
            <value>
                <fullName>Aumentó</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>