force-app/main/default/objects/Formulario__c/fields/Distribuci_n_Prote_nas__c.field-meta.xml
<CustomField>
    <fullName>Distribuci_n_Prote_nas__c</fullName>
    <label>Distribución Proteínas %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>