force-app/main/default/objects/Formulario__c/fields/Distribucion_Grasas__c.field-meta.xml
<CustomField>
    <fullName>Distribucion_Grasas__c</fullName>
    <label>Distribución Grasas %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>