force-app/main/default/objects/Formulario__c/fields/Distribucion_H_de_C__c.field-meta.xml
<CustomField>
    <fullName>Distribucion_H_de_C__c</fullName>
    <label>Distribucion H de C %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>