force-app/main/default/objects/Formulario__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente__r.DNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>