force-app/main/default/objects/Formulario__c/fields/DNI_CI__c.field-meta.xml
<CustomField>
    <fullName>DNI_CI__c</fullName>
    <label>DNI/CI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>