force-app/main/default/objects/Formulario__c/fields/Dolor_Distension_abdominal__c.field-meta.xml
<CustomField>
    <fullName>Dolor_Distension_abdominal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dolor/Distensión abdominal</label>
    <type>Checkbox</type>
</CustomField>