force-app/main/default/objects/Formulario__c/fields/Drogas__c.field-meta.xml
<CustomField>
    <fullName>Drogas__c</fullName>
    <label>Drogas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>