force-app/main/default/objects/Formulario__c/fields/Duraci_n_de_VM_en_d_as__c.field-meta.xml
<CustomField>
    <fullName>Duraci_n_de_VM_en_d_as__c</fullName>
    <label>Duración de VM en días</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>