force-app/main/default/objects/Formulario__c/fields/Duracion_del_cambio_de_ingesta__c.field-meta.xml
<CustomField>
    <fullName>Duracion_del_cambio_de_ingesta__c</fullName>
    <label>Duracion del cambio de Ingesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semanas</fullName>
            </value>
            <value>
                <fullName>Meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>