force-app/main/default/objects/Formulario__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente__r.Edad__c</formula>
    <label>Edad en años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>