force-app/main/default/objects/Formulario__c/fields/Edad_en_meses__c.field-meta.xml
<CustomField>
    <fullName>Edad_en_meses__c</fullName>
    <formula>IF(
    TODAY() - Fecha_nacimiento__c &lt; 365,
    FLOOR((TODAY() - Fecha_nacimiento__c) / 30.44),
    0
)</formula>
    <label>Edad en meses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>