force-app/main/default/objects/Formulario__c/fields/Edemas__c.field-meta.xml
<CustomField>
    <fullName>Edemas__c</fullName>
    <label>Edemas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>