force-app/main/default/objects/Formulario__c/fields/Edemas_Mienbros_Sacro__c.field-meta.xml
<CustomField>
    <fullName>Edemas_Mienbros_Sacro__c</fullName>
    <label>Edemas miembros inferiores / sacro.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Leve</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Severa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>