force-app/main/default/objects/Formulario__c/fields/EGS__c.field-meta.xml
<CustomField>
    <fullName>EGS__c</fullName>
    <label>EGS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>