force-app/main/default/objects/Formulario__c/fields/Email_del_paciente__c.field-meta.xml
<CustomField>
    <fullName>Email_del_paciente__c</fullName>
    <label>Email del paciente</label>
    <type>Email</type>
</CustomField>