force-app/main/default/objects/Formulario__c/fields/Embarazo__c.field-meta.xml
<CustomField>
    <fullName>Embarazo__c</fullName>
    <label>Embarazo</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>