force-app/main/default/objects/Formulario__c/fields/Empleo__c.field-meta.xml
<CustomField>
    <fullName>Empleo__c</fullName>
    <label>Empleo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>