force-app/main/default/objects/Formulario__c/fields/En_coma__c.field-meta.xml
<CustomField>
    <fullName>En_coma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En coma</label>
    <type>Checkbox</type>
</CustomField>