force-app/main/default/objects/Formulario__c/fields/Endocrino_Metabolico_Hematologico__c.field-meta.xml
<CustomField>
    <fullName>Endocrino_Metabolico_Hematologico__c</fullName>
    <label>Endócrino / Metabólico / Hematológico</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes 1</fullName>
            </value>
            <value>
                <fullName>Diabetes 2</fullName>
            </value>
            <value>
                <fullName>Insulina</fullName>
            </value>
            <value>
                <fullName>Hipotiroidismo</fullName>
            </value>
            <value>
                <fullName>Hipertiroidismo</fullName>
            </value>
            <value>
                <fullName>Enfermedad Celíaca</fullName>
            </value>
            <value>
                <fullName>Anticoagulación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>