force-app/main/default/objects/Formulario__c/fields/Enteral__c.field-meta.xml
<CustomField>
    <fullName>Enteral__c</fullName>
    <label>Enteral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contínua</fullName>
            </value>
            <value>
                <fullName>Cíclica diurna</fullName>
            </value>
            <value>
                <fullName>Cíclica nocturna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>