force-app/main/default/objects/Formulario__c/fields/Enteral_historia_enfermeria__c.field-meta.xml
<CustomField>
    <fullName>Enteral_historia_enfermeria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para el formulario &quot;Historia clñinica de enfermería&quot;.</description>
    <label>Enteral</label>
    <type>Checkbox</type>
</CustomField>