force-app/main/default/objects/Formulario__c/fields/Entrega_en_proximo_envio__c.field-meta.xml
<CustomField>
    <fullName>Entrega_en_proximo_envio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrega en próximo envío</label>
    <type>Checkbox</type>
</CustomField>