force-app/main/default/objects/Formulario__c/fields/Entrega_inmediata__c.field-meta.xml
<CustomField>
    <fullName>Entrega_inmediata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrega inmediata</label>
    <type>Checkbox</type>
</CustomField>