force-app/main/default/objects/Formulario__c/fields/Entrenamiento_actividades_de_movilidad__c.field-meta.xml
<CustomField>
    <fullName>Entrenamiento_actividades_de_movilidad__c</fullName>
    <label>Entrenamiento de movilidad</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolados</fullName>
            </value>
            <value>
                <fullName>Incorporación a sentado</fullName>
            </value>
            <value>
                <fullName>Equilibrio en sentado</fullName>
            </value>
            <value>
                <fullName>Transferencias</fullName>
            </value>
            <value>
                <fullName>Bipedestación</fullName>
            </value>
            <value>
                <fullName>Marcha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>